2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-extensions-manager.c:

	s/DOT_INIT/DOT_INI/g.

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/epphy-extensions-manager.c: (free_extension_info),
	(ephy_extensions_manager_load_xml_string), (path_to_identifier),
	(ephy_extensions_manager_load_file), (load_file_from_monitor),
	(dir_changed_cb), (ephy_extensions_manager_load_dir):

	Don't read unused variables, and use a #define for the
	keyfile extension.

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-python-loader.c: (impl_get_object):

	Accept "Module" argument.

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-shlib-loader.c: (impl_get_object)
	(ephy_shlib_loader_class_init):

	Support "Library" argument.

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	R data/epiphany-extension.xsd:
	* src/ephy-extensions-manager.c:
	(ephy_extensions_manager_load_xml_string),
	(ephy_extensions_manager_startup),
	(ephy_extensions_manager_finalize):

	Since the .xml format is deprecated, remove the (already #if 0'd)
	schema validation code.

2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>

	* data/epiphany.m4: Really add the file

2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>

	* data/Makefile.am:
	* data/epiphany.m4:
	* src/ephy-extensions-manager.c: (free_extension_info),
	(ephy_extensions_manager_load_xml_string),
	(ephy_extensions_manager_load_ini_string), (path_to_identifier),
	(ephy_extensions_manager_load_file), (load_extension),
	(load_file_from_monitor), (dir_changed_cb),
	(ephy_extensions_manager_load_dir):

	Add support for extension description files in the keyfile
	format, using the extension .ephy-extension. Also included
	is a m4 macro to help do the translation of these files.
	
2005-09-21  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp: (have_gnome_url_handler):

	Remove unused function.
