@@ -1,3 +1,11 @@
+2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* src/ephy-extensions-manager.c:
+	(ephy_extensions_manager_load_ini_string):
+
+	Don't crash if the Authors key is missing, or
+	there are no keys in the Loader section
+
 2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-extensions-manager.c:
